# Document-Reader

./: .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml  robust-shimmying-rossum.md
src/: __init__.py  formatter.py  models.py  router.py  server.py  utils.py
src/processors/: __init__.py  base.py  excel.py  pdf.py  word.py
testfile/: 电路板修改表.ods  自主PLC通信协议_整理.doc
tests/: __init__.py
